docs(l1): write production-quality deep Javadoc for all 448 L1 annotations
Every annotation now carries a mandatory four-section structure:
- What this annotation is — selector × errno/effect tuple, compile-time
  safety rationale
- What chaos this applies — numbered LD_PRELOAD / Byte Buddy steps
- Observable effects and what to assert in tests — concrete assertions,
  production failure modes
- Deep technical dive — kernel/JDK internals (VFS paths, CAS mechanics,
  seccomp, VMA accounting, JIT tier transitions, structured concurrency)

Covers all seven modules:
- memory (52): mmap_anon/file/file_shared, munmap, mprotect, madvise,
  wildcard — errno + latency variants
- process (108): fork, execve, execveat, posix_spawn, posix_spawnp,
  pthread_create, waitpid, wildcard — errno + latency + FailAfter variants
- time (29): clock_gettime, gettimeofday, clock_nanosleep, nanosleep —
  errno + latency + offset variants
- dns (18): getaddrinfo, getnameinfo, res_query — EAI errnos + latency
  + corrupt variants
- connection (47): tcp, udp, unix, raw, wildcard — errno + latency +
  corrupt + timeout + bandwidth variants (libchaos-net + Toxiproxy)
- filesystem (53): open, read, write, fsync, truncate, unlink, rename_from,
  rename_to, allocate — errno + latency variants
- jvm-agent (141): async, executor, queue, thread, monitor, scheduling,
  shutdown, dns, ssl, http_client, jdbc, nio, network, file_io, thread_local,
  class_loading, jvm_runtime families — delay/suppress/error/stressor effects